// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WelcomeForm component rendering does not render error message with formValidationError false 1`] = `
<form
  className="WelcomeForm"
  style={
    Object {
      "backgroundColor": "#f4f4f8",
    }
  }
>
  <Connect(HeaderMenu) />
  <div
    className="welcomeFormBanner"
    style={
      Object {
        "backgroundColor": "#333",
      }
    }
  >
    <span
      style={
        Object {
          "fontFamily": "Lato, sans-serif",
        }
      }
    >
      Thanks for contacting us! Please fill out a couple brief pieces of information and we will get you chatting with an agent.
    </span>
  </div>
  <span
    className="formValidationError"
  >
    Please complete all fields marked with an *
  </span>
  <div
    className="fields"
  >
    <div
      className="field"
    >
      <label
        htmlFor="First Name"
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        First Name
        <span
          className="required"
          title="Required"
        >
           
          *
        </span>
      </label>
      <input
        maxLength={1000}
        name="firstName"
        onChange={[Function]}
        required={true}
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
        type="text"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <label
        htmlFor="Last Name"
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        Last Name
      </label>
      <input
        maxLength={1000}
        name="lastName"
        onChange={[Function]}
        required={false}
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
        type="text"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <label
        htmlFor="Number Field"
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        Number Field
      </label>
      <input
        maxLength={1000}
        name="numberField"
        onChange={[Function]}
        required={false}
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
        type="number"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <label
        htmlFor="E-Mail"
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        E-Mail
      </label>
      <input
        maxLength={1000}
        name="email"
        onChange={[Function]}
        required={false}
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
        type="email"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <label
        htmlFor="Phone Number"
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        Phone Number
      </label>
      <input
        maxLength={1000}
        name="phoneNumber"
        onChange={[Function]}
        required={false}
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
        type="tel"
        value=""
      />
    </div>
  </div>
  <button
    className="submit"
    onClick={[Function]}
    style={
      Object {
        "background": "#333",
        "fontFamily": "Lato, sans-serif",
      }
    }
  >
    Submit
  </button>
</form>
`;

exports[`WelcomeForm component rendering renders error message if formValidationError state is true 1`] = `
<form
  className="WelcomeForm"
  style={
    Object {
      "backgroundColor": "#f4f4f8",
    }
  }
>
  <Connect(HeaderMenu) />
  <div
    className="welcomeFormBanner"
    style={
      Object {
        "backgroundColor": "#333",
      }
    }
  >
    <span
      style={
        Object {
          "fontFamily": "Lato, sans-serif",
        }
      }
    >
      Thanks for contacting us! Please fill out a couple brief pieces of information and we will get you chatting with an agent.
    </span>
  </div>
  <div
    className="fields"
  >
    <div
      className="field"
    >
      <label
        htmlFor="First Name"
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        First Name
        <span
          className="required"
          title="Required"
        >
           
          *
        </span>
      </label>
      <input
        maxLength={1000}
        name="firstName"
        onChange={[Function]}
        required={true}
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
        type="text"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <label
        htmlFor="Last Name"
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        Last Name
      </label>
      <input
        maxLength={1000}
        name="lastName"
        onChange={[Function]}
        required={false}
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
        type="text"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <label
        htmlFor="Number Field"
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        Number Field
      </label>
      <input
        maxLength={1000}
        name="numberField"
        onChange={[Function]}
        required={false}
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
        type="number"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <label
        htmlFor="E-Mail"
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        E-Mail
      </label>
      <input
        maxLength={1000}
        name="email"
        onChange={[Function]}
        required={false}
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
        type="email"
        value=""
      />
    </div>
    <div
      className="field"
    >
      <label
        htmlFor="Phone Number"
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
      >
        Phone Number
      </label>
      <input
        maxLength={1000}
        name="phoneNumber"
        onChange={[Function]}
        required={false}
        style={
          Object {
            "fontFamily": "Lato, sans-serif",
          }
        }
        type="tel"
        value=""
      />
    </div>
  </div>
  <button
    className="submit"
    onClick={[Function]}
    style={
      Object {
        "background": "#333",
        "fontFamily": "Lato, sans-serif",
      }
    }
  >
    Submit
  </button>
</form>
`;
